Make some styling chnages to knowledge repo page. Spacing and width of columns is fixed

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -40,4 +40,8 @@
 table, th, td {
   border: 1px solid black;
   text-align: center;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
 }
